Added support for PaperMC